# advmates

./: .gitignore  README.md
branches/mates_oacis/: CMakeLists.txt
branches/mates_oacis/doc/doxygen/: advmates-dox  mainDox.dox
branches/mates_oacis/doc/manual/: AdvMates-0.5-manual-jp.tex  CMakeLists.txt
branches/mates_oacis/examples/Data1/: defaultGenerateTable.txt  network.txt
branches/mates_oacis/examples/Data2/: detector.txt  speedLimit.txt
branches/mates_oacis/examples/Data2/intersection/: 000007.txt
branches/mates_oacis/examples/Data3/intersection/: 000000.txt
branches/mates_oacis/examples/Data4/: init.txt
branches/mates_oacis/examples/Data4/result/inst/: detD0001.txt  detS0002.txt
branches/mates_oacis/examples/Data5/signals/: defaultInter5.msa
branches/mates_oacis/examples/Data6/intersection/: 000005.txt  000007.txt  000008.txt
branches/mates_oacis/examples/Data6/result/: global_static.txt
branches/mates_oacis/examples/Data6/signals/: defaultInter10.msa  defaultInter5.msa  defaultInter6.msa  defaultInter8.msa
branches/mates_oacis/examples/Data7/: mapEditor.mie
branches/mates_oacis/examples/Data7/intersection/: 000002.txt
branches/mates_oacis/lib/autogl/: CMakeLists.txt  Makefile.alt  autogl_gui_gtk_glx.c  autogl_gui_gtk_gtkglarea.c
branches/mates_oacis/lib/mt19937/: CMakeLists.txt
branches/mates_oacis/pre/map2mates/: drmFile.h  main.cpp  map.cpp  map.h  road.h
branches/mates_oacis/pre/map2mates/example/data1/mates/: mapEditor.mie
branches/mates_oacis/pre/map2mates/example/data1/output/: network.txt  roadConvError.txt
branches/mates_oacis/pre/map2mates/example/data2/output_mod/: mapEditor.mie
branches/mates_oacis/pre/map2mates/example/data3/: roadconv.txt
branches/mates_oacis/pre/map2mates/example/data3/output/: mapPosition.txt
branches/mates_oacis/pre/map2mates/example/data3/output_mod/: mapEditor.mie
branches/mates_oacis/pre/map2mates/example/data4/output/: roadConvError.txt
branches/mates_oacis/pre/mapedit/: CMakeLists.txt  fileAccess.h  intsec.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapframe.h  road.h  roadDialog.cpp
branches/mates_oacis/solver/: AppCalc.cpp  ObjManager.cpp  ObjManager.h
tags/rev34/: CMakeLists.txt
tags/rev34/doc/doxygen/: advmates-dox  advmates-dox-min
tags/rev34/examples/Data2/: mapPosition.txt  network.txt
tags/rev34/examples/Data3/: mapPosition.txt  network.txt
tags/rev34/examples/Data3/intersection/: 000001.txt
tags/rev34/examples/Data4/: mapPosition.txt
tags/rev34/examples/Data4/result/inst/: detD0002.txt
tags/rev34/examples/Data5/signals/: default.msf  defaultInter2.msa  defaultInter4.msa  defaultInter6.msa
tags/rev34/examples/Data6/intersection/: 000006.txt  000009.txt
tags/rev34/examples/Data6/signals/: defaultInter7.msa
tags/rev34/examples/Data7/: init.txt  mapPosition.txt  network.txt
tags/rev34/lib/autogl/: CMakeLists.txt  advautogl-config__Darwin_fink  autogl_gui_windows.c
tags/rev34/pre/map2mates/: app.h  drmFile.cpp  merge.cpp  merge.h  osmFile.h  road.cpp
tags/rev34/pre/map2mates/example/data4/: roadconv.txt
tags/rev34/pre/mapedit/: fileAccess.cpp  intsecDialog.ui  map.h  mapframe.cpp  road.cpp  roadDialog.h  roadDialog.ui  setupDialog.cpp  setupDialog.h  setupDialog.ui  shMem.cpp  testDataDialog.cpp
tags/rev34/solver/: ARouter.h  AmuLineSegment.cpp  AmuLineSegment.h  AmuMatrix.h  AmuMatrix2D.h  AmuMatrix3D.h  AmuStringOperator.cpp  AmuStringOperator.h  AppCalc.cpp  AppCalc.h  AppMates.cpp  AppMates.h  AppSim.cpp  Blinker.cpp  Blinker.h  Border.h  CMakeLists.txt  Clocker.cpp  Clocker.h  Conf.h  Detector.cpp  Detector.h  DetectorIO.cpp  DetectorIO.h  DetectorUnit.cpp  DetectorUnit.h  Drawer.cpp  Drawer.h  GLColor.cpp  GLColor.h  GVInitializer.cpp  GVManager.cpp  GVManager.h  GenerateVehicleIO.cpp  GenerateVehicleIO.h  GeneratingTable.cpp  GeneratingTable.h  Intersection.cpp  Intersection.h  IntersectionBuilder.cpp  (+56 more)
trunk/: Makefile.alt
trunk/doc/doxygen/: HowToExecute.dox  advmates-dox  advmates-dox-css.css  mainDox.dox
trunk/doc/manual/: jp-ref.bib  jp-sect1.tex
trunk/examples/Data1/: defaultGenerateTable.txt
trunk/examples/Data1/result/: accident.txt  error.txt  runInfo.txt  vehicleCount.txt
trunk/examples/Data1/result/inst/: gen000001.txt  gen000002.txt  gen000003.txt  gen000004.txt
trunk/examples/Data2/: defaultGenerateTable.txt  generateTable.txt
trunk/examples/Data2/intersection/: 000000.txt  000005.txt
trunk/examples/Data4/: network.txt
trunk/examples/Data4/intersection/: 000000.txt
trunk/examples/Data5/: defaultGenerateTable.txt  mapPosition.txt  network.txt
trunk/examples/Data5/intersection/: 000000.txt  000001.txt
trunk/examples/Data5/result/inst/: detS0001.txt
trunk/examples/Data5/signals/: defaultInter3.msa
trunk/examples/Data6/: mapPosition.txt  network.txt
trunk/examples/Data6/intersection/: 000000.txt  000010.txt
trunk/examples/Data6/result/: link_info.txt  node_info.txt  road_entity_info.txt
trunk/examples/Data6/signals/: defaultInter9.msa
trunk/lib/autogl/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.alt  advautogl-config__Darwin  advautogl-config__Linux  autogl_graphics_opengl_inside.h  cmake_install.cmake
trunk/lib/mt19937/: CMakeCache.txt  Makefile  Makefile.alt  cmake_install.cmake
trunk/pre/map2mates/: CMakeLists.txt  app.cpp  intsec.cpp  intsec.h  matesFile.cpp  matesFile.h  osmFile.cpp
trunk/pre/map2mates/example/: roadconv.txt
trunk/pre/map2mates/example/data1/: roadconv.txt
trunk/pre/map2mates/example/data1/mates/: mapEditorError.txt
trunk/pre/map2mates/example/data2/: roadconv.txt
trunk/pre/map2mates/example/data2/output/: mapPosition.txt  network.txt  roadConvError.txt
trunk/pre/map2mates/example/data2/output.org/: network.txt
trunk/pre/map2mates/example/data2/output_mod/: network.txt
trunk/pre/map2mates/example/data3/output/: network.txt
trunk/pre/mapedit/: app.cpp  app.h  intsec.cpp  intsecDialog.cpp  intsecDialog.h  main.cpp  map.cpp  mapedit.qrc  shMem.h  testDataDialog.h  testDataDialog.ui
trunk/solver/: Makefile.alt
(+11 files in other folders)
